# mediasub

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic.py
mediasub/: __init__.py  _logger.py  _types.py  base.py  cli.py  content.py  core.py  database.py  errors.py  source.py  subscription.py  types.py  utils.py
mediasub/builtins/: posters.py  sources.py
mediasub/models/: __init__.py  anime.py  base.py  manga.py
