[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediasub"
description = "Listen media from different sources."
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
version = { attr = "mediasub.__version__" }
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"] }

[tool.setuptools]
packages = ["mediasub", "mediasub.models"]

[tool.setuptools.package-data]
mediasub = ["py.typed"]

[tool.pylint]
max-line-length = 120
disable = ["C0115", "C0116", "C0114", "R0903", "R0902", "W0511"]
good-names = ["e", "id"]
allow-reexport-from-package = true
