[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediasub"
description = "Listen media from different sources."
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
version = { attr = "mediasub.__version__" }
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"] }

[tool.setuptools]
packages = ["mediasub", "mediasub.models"]

[tool.setuptools.package-data]
mediasub = ["py.typed"]

[tool.pylint]
max-line-length = 120
allow-reexport-from-package = true
ignore-patterns = [".*.pyi"]
jobs = 4
unsafe-load-any-extension = false
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "abstract-method",
    "unnecessary-ellipsis",
    # "arguments-differ",
    # "attribute-defined-outside-init",
    # "duplicate-code",
    # "eq-without-hash",
    # "fixme",
    # "global-statement",
    # "implicit-str-concat",
    # "import-error",
    # "import-self",
    # "import-star-module-level",
    # "inconsistent-return-statements",
    # "invalid-str-codec",
]
argument-rgx = "^[a-z_][a-z0-9_]{0,30}$"
attr-rgx = "^[a-z_][a-z0-9_]{0,30}$"
function-rgx = "^[a-z_][a-z0-9_]{0,30}$"
method-rgx = '[a-z_][a-z0-9_]{0,30}$'
variable-rgx = '[a-z_][a-z0-9_]{0,30}$'
ignore-long-lines = '''(?x)(
^\s*(\#\ )?<?https?://\S+>?$|
^\s*(from\s+\S+\s+)?import\s+.+$)'''
indent-string = '    '
dummy-variables-rgx = '^\*{0,2}(_$|unused_|dummy_)'
callbacks = ['cb_', '_cb']
